@@ -90,8 +90,9 @@
  */
 #define CONFIG_SOCKET 1
 #undef  CONFIG_UNIX
-#define CONFIG_NANO 1
-#undef  CONFIG_INET
+#undef  CONFIG_NANO
+#define CONFIG_INET 1
+#define CONFIG_INET_STATUS 1
 #undef  CONFIG_SOCK_CLIENTONLY
 #define CONFIG_SOCK_STREAMONLY 1
 
